--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@papercups-io/chat-widget",
-  "version": "1.0.34",
+  "version": "1.1.0-beta.0",
   "description": "Papercups chat widget",
   "author": "reichert621",
   "license": "MIT",
